cluster/homelab/apps/media-servers/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: tautulli
    namespace: media-servers
    annotations:
        gethomepage.dev/enabled: ENC[AES256_GCM,data:25VhZg==,iv:91Bv4sJDfiLeNhBBNjts8mFqO9pORCbMg/03FIbKNQM=,tag:a3EhN4sxiEZqFyBwV5DHaA==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:uTONa02ZhuwazhTERnRXy/3aFe/188TLw8Bnmmu7yGgEFlXACf/5v6yx,iv:qTs5XNc4tnQk+5ROQ921x5HIchJvKNjaqWRUQyHCOkY=,tag:yIYQvPv37Et86osknNUZpg==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:UPN6xNueYV6MYtB9cg==,iv:IV3vFfw3IEK2NXRRA4n+zkrOCWgYI6cMPyJo8Lkfr+E=,tag:0HIUQye9FPaq2JscsmXTWA==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:o9BUqw==,iv:5WZopVxxpsGam1RWPVjSW4gd8z3uuLw8oTvEaN1Mu5A=,tag:bE7amjaSi1nYlUeMnxTECA==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:WEWqYw==,iv:3ty7ggAmAfdh2S7vLBS0udfRF1bTZdGloaXCsIaaKl4=,tag:1tEQJ8HwF0raslAmTHBp3A==,type:str]
        gethomepage.dev/namespace: ENC[AES256_GCM,data:dIO3jBAYqU+0X5tgTg==,iv:W4j83mgBMiQkDL33rhdMZr1yWBhSMDa8VVROL29m5Dk=,tag:3vVuyQHgkHpHu6CDV3MsHA==,type:str]
        gethomepage.dev/app: ENC[AES256_GCM,data:aBoy/w==,iv:TqLffehCUyv1ay/Dp749H6GCi/FULLiJl3Pord7/1EI=,tag:iuN4UKiNP8yt0V6/LCuCbw==,type:str]
        gethomepage.dev/href: ENC[AES256_GCM,data:UNUVwWiRb5BKdAM+0N62uJZEvA==,iv:jE7yNBXQaRGDUnHn6+yQ6GcI4eURs8b2b4cCXpqh/Yk=,tag:WywsAh/NYuRljLu3wEadFw==,type:str]
        gethomepage.dev/widget.type: ENC[AES256_GCM,data:sl7LBJ9pgjQ=,iv:6a0RxlxG716JezioWNkBAma06/CHfJjuroYUClXtOdY=,tag:qAJY0gBa5Aj5dTw/lVdvCQ==,type:str]
        gethomepage.dev/widget.url: ENC[AES256_GCM,data:trNXz2sLZZf7TuEtBj3mAbUvIs1OKc24HDQ7aHnj,iv:cDNRZwyyvJLVzAw4qKRX3VvL7ewX5y5xKzQg1izx0hU=,tag:wpmIWI9Jn+U8LxEa1rSrsA==,type:str]
        gethomepage.dev/widget.key: ENC[AES256_GCM,data:rqcGeiyZ7ckozJ0TKqM0Z20dkAWHL6B74HxQPX7rFjw=,iv:TW7JHnUKkq1klnejREUabhfrdzb9zCCUInLlYjyMp4Q=,tag:BxamW3ayLsxhQvONKGt16g==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1umudqfh963mmhgkgatylwh9jgez7qh4twpaqy3ea3nlcarhm09hq5er32r
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuZGR2eW5xWjJqUWg5aXN0
[...]
            p9xrjiTjXUFC+pzE5YFsXgeOslTFnieufL5sZztaKssKFyMduH0t+Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-03-26T02:01:04Z"
    mac: ENC[AES256_GCM,data:Abbxn9E0G1toCZdO5RQ67ES2Js2Ue9/GuNj7ohQ9eh5+QE7upn2fHUTC7/SlinbaKiPk2WGp1kS0NVwpMa4q+Qzd5jLlWk7iAjLgHe8w2KXA2Tf9Svei9y8kDpxFkLlI5sXnbxyE377XJBApo3gcOPz6d5X6UX8y9AIqS6H0Qp4=,iv:hhnj99L8loh+Ys+5bgAuEPWqIvBn4KRNW8TTck7jEaE=,tag:ilPxQTxr06Qor6LwrWgUVA==,type:str]
    pgp: []
    encrypted_regex: ^(rules|annotations|)$
    version: 3.9.4
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: immich
    namespace: media-servers
    annotations:
        gethomepage.dev/enabled: ENC[AES256_GCM,data:25VhZg==,iv:91Bv4sJDfiLeNhBBNjts8mFqO9pORCbMg/03FIbKNQM=,tag:a3EhN4sxiEZqFyBwV5DHaA==,type:str]
        gethomepage.dev/description: ENC[AES256_GCM,data:tTjP9KC0ex5MTo6mORvYLTRQDOcJm0njDlkVYoQgODchkw==,iv:A9gQryB5hTMtbt5Bmh/Frybw4FAM4zqm1kQMRru/x7M=,tag:uf2FYx2IdcPuGp/Ke3ZM0g==,type:str]
        gethomepage.dev/group: ENC[AES256_GCM,data:UPN6xNueYV6MYtB9cg==,iv:IV3vFfw3IEK2NXRRA4n+zkrOCWgYI6cMPyJo8Lkfr+E=,tag:0HIUQye9FPaq2JscsmXTWA==,type:str]
        gethomepage.dev/icon: ENC[AES256_GCM,data:ofJJeHe2,iv:Mv0ZPGBR1tBaHZFaGRRdpZbva2I1St72QfKyWROkI9U=,tag:6Ie5o4a9hpPYj0STcuEHNg==,type:str]
        gethomepage.dev/name: ENC[AES256_GCM,data:NKLVSO6M,iv:vhfF1xEpG/H1AlQBOF6Ny0HeiKnkU0+PxADkplRHd3I=,tag:NT+577YMFxYD7G5GfMmNRQ==,type:str]
        gethomepage.dev/href: ENC[AES256_GCM,data:QfoIdoe9Sv5X5avHalVd1PWFgiNQWKCZSiVz1A==,iv:2ZDgZJjVANzqBVo7PGc2VNFhaQl7f2l260KTmCCcijM=,tag:W93/veJD4Le/Qx/Q1GZd/w==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1umudqfh963mmhgkgatylwh9jgez7qh4twpaqy3ea3nlcarhm09hq5er32r
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuZGR2eW5xWjJqUWg5aXN0
[...]
            p9xrjiTjXUFC+pzE5YFsXgeOslTFnieufL5sZztaKssKFyMduH0t+Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-03-26T02:01:04Z"
    mac: ENC[AES256_GCM,data:Abbxn9E0G1toCZdO5RQ67ES2Js2Ue9/GuNj7ohQ9eh5+QE7upn2fHUTC7/SlinbaKiPk2WGp1kS0NVwpMa4q+Qzd5jLlWk7iAjLgHe8w2KXA2Tf9Svei9y8kDpxFkLlI5sXnbxyE377XJBApo3gcOPz6d5X6UX8y9AIqS6H0Qp4=,iv:hhnj99L8loh+Ys+5bgAuEPWqIvBn4KRNW8TTck7jEaE=,tag:ilPxQTxr06Qor6LwrWgUVA==,type:str]
    pgp: []
    encrypted_regex: ^(rules|annotations|)$
    version: 3.9.4
